add style section 1

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,3 +62,29 @@ color: #404bbf;
 .page-footer {
     background-color: #2e2f42;;
 }
+
+.hero-section {
+    background-color: #2e2f42;
+}
+.hero-section-text {
+    font-weight: 700;
+        font-size: 56px;
+        line-height: 1.07143;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #fff;
+}
+.button {
+    font-family: inherit;
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #fff;
+        background-color: #4d5ae5;
+        cursor: pointer;
+}
+.button:hover,
+.button:focus {
+    background-color: #404bbf;
+}
