--- a/css/styles.css
+++ b/css/styles.css
@@ -113,12 +113,13 @@ font-weight: 400;
         color: #2e2f42;
 }
 .team {
+    text-transform: capitalize;
     background-color: #f4f4fd;
 }
 .team-member {
     font-weight: 500;
         font-size: 20px;
-        line-height: 1.2;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
@@ -130,5 +131,8 @@ font-weight: 400;
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
+}
+.team-member-card {
+    background-color: #fff; 
 }
 
